# OpenCV_Test_Grader

./: .python-version  LICENSE  README.md  pyproject.toml  test_grader.py
.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  argparse.meta.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.meta.json  io.data.json  io.meta.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  test.data.json  test.meta.json  test_grader.data.json  test_grader.meta.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.7/collections/: __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.meta.json  abc.meta.json
.mypy_cache/3.7/os/: __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.7/test_grader_opencv/: __init__.data.json  (+3 more)
.mypy_cache/3.8/: _ast.data.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.meta.json  argparse.data.json  argparse.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.meta.json  io.data.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
test_grader_OpenCV/: README.md
test_grader_opencv/: test_grader.py
test_grader_opencv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_test_grader_opencv.py
(+42 files in other folders)
