[tool.poetry]
name = "test_grader_OpenCV"
version = "0.1.0"
description = ""
authors = ["Valentino Vizner <valentino.vizner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
tensorflow-gpu = "^2.1.0"
opencv-contrib-python = "^4.1.2"
scikit-image = "^0.16.2"
pillow = "^7.0.0"
imutils = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.4.4"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
